--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--här ifån -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -44,15 +44,16 @@
             <span></span>
         </button>
 
-    </main>
+    </main> <!--till hit är max  -->
     <script src="js/script.js"></script>
 
     <script>
+        //luis
         let currentPlayer = 0;
         let currentRoundScore = 0;
         let playerScores = [0, 0];
         let gameOver = false;
-
+        //luis
         function rollDice() {
             if (gameOver) return;
 
@@ -83,7 +84,7 @@
                 switchPlayer();
             }
         }
-
+        //max
         function switchPlayer() {
             // Remove player_active class from all players
             document.querySelectorAll('.player').forEach(player => {
@@ -98,7 +99,7 @@
             activePlayer.classList.add('player_active');
         }
 
-
+        //max
         function resetGame() {
             currentPlayer = 0;
             currentRoundScore = 0;
@@ -110,7 +111,7 @@
             document.getElementById('current_0').textContent = 0;
             document.getElementById('current_1').textContent = 0;
         }
-
+        //luis
         function updateDiceImage(diceValue) {
             const diceImage = document.getElementById('diceImage');
             diceImage.src = `dice (${diceValue}).png`;
